# xemexpy

./: README.md  app.py  clock.py  config.py  main.py  pyproject.toml  requirements.txt  xemrunner.py
.github/workflows/: pylint.yml
tests/: conftest.py  test_project.py
