[project]
name = "xemexpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler==3.0.0",
    "exception==0.1.0",
    "flask==3.1.3",
    "jinja2>=2.11.3",
    "oauthlib==3.3.1",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "tweepy==4.16.0",
]
